--- a/lawrence-weather-app/src/components/App/App.css
+++ b/lawrence-weather-app/src/components/App/App.css
@@ -1,9 +1,7 @@
-
 .app {
-    width: 60%;
-    margin: 0 auto;
-    background-size: 100% 100%;
-    top:90px;
-    position: relative;
+  width: 60%;
+  margin: 0 auto;
+  background-size: cover;
+  top: 90px;
+  position: relative;
 }
-
