--- a/lawrence-weather-app/src/components/App/App.css
+++ b/lawrence-weather-app/src/components/App/App.css
@@ -1,7 +1,9 @@
+
 .app {
-  width: 60%;
-  margin: 0 auto;
-  background-size: cover;
-  top: 90px;
-  position: relative;
+    width: 60%;
+    margin: 0 auto;
+    background-color: rgba(255,255,255.0.7);
+    top:90px;
+    position: relative;
 }
+
